--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coin Flip Decentralized Application</title>
     <link rel="stylesheet" href="styles.css">
+<!-- Universal Card -->
+    <meta property="og:title" content="Coin Flip Decentralized Application">
+    <meta property="og:description" content="The Coin Flip Decentralized Application (DApp) is a fun and transparent platform built on the Katla test net. It offers users a simple yet exciting opportunity to engage in a fair 50/50 chance game, where they can wager and potentially win cryptocurrency by correctly predicting the outcome of a coin flip.">
+    <meta property="og:image" content="x.png">
+    <meta property="og:url" content="https://everypunks.xyz">
 
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Coin Flip Decentralized Application">
+    <meta name="twitter:description" content="The Coin Flip Decentralized Application (DApp) is a fun and transparent platform built on the Katla test net. It offers users a simple yet exciting opportunity to engage in a fair 50/50 chance game, where they can wager and potentially win cryptocurrency by correctly predicting the outcome of a coin flip.">
+    <meta name="twitter:image" content="x.png">
+    
+</head>
 </head>
 <body>
     <div class="container">
