--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <!-- Universal Card -->
     <meta property="og:title" content="Coin Flip Decentralized Application">
     <meta property="og:description" content="The Coin Flip Decentralized Application (DApp) is a fun and transparent platform built on the Katla test net. It offers users a simple yet exciting opportunity to engage in a fair 50/50 chance game, where they can wager and potentially win cryptocurrency by correctly predicting the outcome of a coin flip.">
-    <meta property="og:image" content="x.png">
+    <meta property="og:image" content="hashcard1290.png">
     <meta property="og:url" content="https://everypunks.xyz">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Coin Flip Decentralized Application">
     <meta name="twitter:description" content="The Coin Flip Decentralized Application (DApp) is a fun and transparent platform built on the Katla test net. It offers users a simple yet exciting opportunity to engage in a fair 50/50 chance game, where they can wager and potentially win cryptocurrency by correctly predicting the outcome of a coin flip.">
-    <meta name="twitter:image" content="x.png">
+    <meta name="twitter:image" content="hashcard1290.png">
     
 </head>
 </head>
