--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
             <li><strong>Community Engagement:</strong> The DApp encourages community engagement and interaction, fostering a sense of camaraderie among users who share a passion for blockchain technology and gaming.</li>
         </ul>
 
+
+        <h2>Faucet </h2>
+
+        <p>The faucet on the Taiko testnet provides users with 500 Asif test tokens every 12 hours. These tokens are intended for testing purposes on the Coinflip decentralized application (DApp). Additionally, users have the option to exchange these Asif test tokens for Ethereum (ETH). This functionality enables developers and testers to assess the performance and functionality of Coinflip DApp in a simulated environment before deploying it on the mainnet.</p>
+
+        
         <h2>Conclusion:</h2>
         <p>The Coin Flip Decentralized Application provides users with a secure, transparent, and entertaining platform to engage in a simple yet thrilling game of chance. With its emphasis on decentralization, fairness, and user experience, the DApp represents a pioneering approach to combining cryptocurrency and gaming within the blockchain ecosystem. Join us on the Katla test net and experience the excitement of the Coin Flip DApp today!</p>
    
@@ -65,8 +71,8 @@
         <div class="container">
         <p><strong>Author/Owner:</strong> Asif </p>
         <p><a href="https://x.com/XponentialEarns"><img src="10.png" alt="Image 10"></a></p>
-        <p><strong>Special Thanks:</strong> Oneofthenfts 
-             helped me with the CSS framework and give special ideas to implement.</p>
+        <p><strong>Special Thanks:</strong> ONEOFTHENFTS 
+             helped me with css framework and give me some incredible ideas to implement.</p>
         <p><a href="https://x.com/oneofthenfts"><img src="20.png" alt="Image 20"></a></p>
     </div>
     
