--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </ul>
 
 
-        <h2>Faucet </h2>
+        <h2>Faucet: </h2>
 
         <p>The faucet on the Taiko testnet provides users with 500 Asif test tokens every 12 hours. These tokens are intended for testing purposes on the Coinflip decentralized application (DApp). Additionally, users have the option to exchange these Asif test tokens for Ethereum (ETH). This functionality enables developers and testers to assess the performance and functionality of Coinflip DApp in a simulated environment before deploying it on the mainnet.</p>
 
@@ -69,10 +69,10 @@
         </body>
         
         <div class="container">
-        <p><strong>Author/Owner:</strong> Asif </p>
+        <p><strong>Author/Owner:</strong> <a href="https://x.com/XponentialEarns">ASIF IQBAL</a> </p>
         <p><a href="https://x.com/XponentialEarns"><img src="10.png" alt="Image 10"></a></p>
-        <p><strong>Special Thanks:</strong> ONEOFTHENFTS 
-             helped me with css framework and give me some incredible ideas to implement.</p>
+        <p><strong>Special Thanks:</strong> <a href="https://x.com/oneofthenfts">ONEOFTHENFTS</a>
+         helped me with css framework and give me some incredible ideas to implement.</p>
         <p><a href="https://x.com/oneofthenfts"><img src="20.png" alt="Image 20"></a></p>
     </div>
     
