--- a/index.html
+++ b/index.html
@@ -64,6 +64,19 @@
         <p>The Coin Flip Decentralized Application provides users with a secure, transparent, and entertaining platform to engage in a simple yet thrilling game of chance. With its emphasis on decentralization, fairness, and user experience, the DApp represents a pioneering approach to combining cryptocurrency and gaming within the blockchain ecosystem. Join us on the Katla test net and experience the excitement of the Coin Flip DApp today!</p>
    
 
+<h2>How To Use The Dapp?</h2>
+<ul>
+    <li>1. Click Faucet Button</li>
+    <li>2. Connect Your wallet</li>
+    <li>3. Click On Get Token button</li>
+    <li>4. Then Click On "Coinfilp Dapp" Text</li>
+    <li>5. Enter The amount</li>
+    <li>6. Select Head/Tell</li>
+    <li>7. Complete The Transactions</li>
+    <li>8. Check You Win or lose</li>
+    <li>9. Click Withdraw To Claim Your Winnings</li>
+</ul>
+
         <button onclick="window.location.href='https://faucet.everypunks.xyz'" class="black-button">Faucet</button>
         <button onclick="window.location.href='https://test.everypunks.xyz'" class="black-button">Coin Flip</button>
         </body>
