--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://everypunks.com"/>
     <meta property="og:title" content="Coin Flip Decentralized Application"/>
     <meta property="og:description" content="The Coin Flip Decentralized Application (DApp) is a fun and transparent platform built on the Katla test net. It offers users a simple yet exciting opportunity to engage in a fair 50/50 chance game, where they can wager and potentially win cryptocurrency by correctly predicting the outcome of a coin flip."/>
-    <meta property="og:image" content="/hashcard1290.png"/>
+    <meta property="og:image" content="https://everypunks.com/hashcard1290.png"/>
     <link rel="icon" href="/favicon.ico"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:creator" content="@XponentialEarns"/>
@@ -20,7 +20,7 @@
     <meta property="twitter:url" content="https://everypunks.com"/>
     <meta property="twitter:title" content="Coin Flip Decentralized Application"/>
     <meta property="twitter:description" content="The Coin Flip Decentralized Application (DApp) is a fun and transparent platform built on the Katla test net. It offers users a simple yet exciting opportunity to engage in a fair 50/50 chance game, where they can wager and potentially win cryptocurrency by correctly predicting the outcome of a coin flip."/>
-    <meta property="twitter:image" content="hashcard1290.png"/>
+    <meta property="twitter:image" content="https://everypunks.com/hashcard1290.png"/>
 </head>
 </head>
 <body>
