--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coin Flip Decentralized Application</title>
+    <title>Taiko Flip Decentralized Application</title>
     <link rel="stylesheet" href="styles.css">
    <meta name="title" content="Coin Flip Decentralized Application"/>
     <meta name="description" content="The Coin Flip Decentralized Application (DApp) is a fun and transparent platform built on the Katla test net. It offers users a simple yet exciting opportunity to engage in a fair 50/50 chance game, where they can wager and potentially win cryptocurrency by correctly predicting the outcome of a coin flip."/>
@@ -25,10 +25,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Coin Flip Is A Decentralized Application</h1>
+        <h1>Taiko Flip Is A Decentralized Application</h1>
 
         <h2>Overview:</h2>
-        <p>The Coin Flip Decentralized Application (DApp) is a fun and transparent platform built on the Katla test net. It offers users a simple yet exciting opportunity to engage in a fair 50/50 chance game, where they can wager and potentially win cryptocurrency by correctly predicting the outcome of a coin flip.</p>
+        <p>The Taiko Flip Decentralized Application (DApp) is a fun and transparent platform built on the Katla test net. It offers users a simple yet exciting opportunity to engage in a fair 50/50 chance game, where they can wager and potentially win cryptocurrency by correctly predicting the outcome of a coin flip.</p>
 
         <h2>Features:</h2>
         <ol>
@@ -41,7 +41,7 @@
 
         <h2>How It Works:</h2>
         <ol>
-            <li><strong>Connect Wallet:</strong> Users must connect their cryptocurrency wallet to the DApp to participate in the coin flip game.</li>
+            <li><strong>Connect Wallet:</strong> Users must connect their cryptocurrency wallet to the DApp to participate in the Taiko flip game.</li>
             <li><strong>Place Bet:</strong> After connecting their wallet, users can select the amount of cryptocurrency they wish to wager on the outcome of the coin flip.</li>
             <li><strong>Flip Coin:</strong> Once the bet is placed, the smart contract executes a fair coin flip, with equal chances of landing on heads or tails.</li>
             <li><strong>Outcome Determination:</strong> The result of the coin flip is recorded on the blockchain, ensuring transparency and immutability.</li>
@@ -60,11 +60,11 @@
 
         <h2>Faucet: </h2>
 
-        <p>The faucet on the Taiko testnet provides users with 500 Asif test tokens every 12 hours. These tokens are intended for testing purposes on the Coinflip decentralized application (DApp). Additionally, users have the option to exchange these Asif test tokens for Ethereum (ETH). This functionality enables developers and testers to assess the performance and functionality of Coinflip DApp in a simulated environment before deploying it on the mainnet.</p>
+        <p>The faucet on the Taiko testnet provides users with 500 Asif test tokens every 12 hours. These tokens are intended for testing purposes on the Coinflip decentralized application (DApp). Additionally, users have the option to exchange these Asif test tokens for Ethereum (ETH). This functionality enables developers and testers to assess the performance and functionality of Taiko Flip DApp in a simulated environment before deploying it on the mainnet.</p>
 
         
         <h2>Conclusion:</h2>
-        <p>The Coin Flip Decentralized Application provides users with a secure, transparent, and entertaining platform to engage in a simple yet thrilling game of chance. With its emphasis on decentralization, fairness, and user experience, the DApp represents a pioneering approach to combining cryptocurrency and gaming within the blockchain ecosystem. Join us on the Katla test net and experience the excitement of the Coin Flip DApp today!</p>
+        <p>The Taiko Flip Decentralized Application provides users with a secure, transparent, and entertaining platform to engage in a simple yet thrilling game of chance. With its emphasis on decentralization, fairness, and user experience, the DApp represents a pioneering approach to combining cryptocurrency and gaming within the blockchain ecosystem. Join us on the Katla test net and experience the excitement of the Taiko Flip  today!</p>
    
 
 <h2>How To Use The Dapp?</h2>
