--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
         <div class="container">
         <p><strong>Author/Owner:</strong> <a href="https://x.com/XponentialEarns">ASIF IQBAL</a> </p>
         <p><a href="https://x.com/XponentialEarns"><img src="10.png" alt="Image 10"></a></p>
-        <p><strong>Special Thanks:</strong> <a href="https://x.com/oneofthenfts">ONEOFTHENFTS</a>
+        <p><strong>Special Thanks:</strong> <a href="">ONEOFTHENFTS</a>
          helped me with css framework and give me some incredible ideas to implement.</p>
-        <p><a href="https://x.com/oneofthenfts"><img src="20.png" alt="Image 20"></a></p>
+        <p><a href=""><img src="20.png" alt="Image 20"></a></p>
     </div>
     
 </body>
